Changes
=======

0.10.0 (2024-02-19)
------------------
- store known primary keys in repository (data/primary_keys.json)
- add new function bcdata.get_primary_keys(), use remote url as default primary key lookup for bc2pg (#163)
- --refresh option cleanup, now available only via CLI

0.9.2 (2024-02-18)
------------------
- bc2pg geometry type inspection - look for geometries at bottom of dataset when none present at top (#158)
- add refresh option to bc2pg command, truncating existing table (#160)

0.9.1 (2023-12-30)
------------------
- fix problem with multiple-resource bcdc packages (#153)

0.9.0 (2023-11-17)
------------------
- use default pagesize provided by server and remove pagesize option from all functions and commands (#90)
- restore dynamic layer listing (#142)
- better error reporting when service unavailable (#143)
- include data description in `bcdata info` output (#148)
- standardize and test retries with `stamina`

0.8.1post1 (2023-08-21)
------------------
- update requirements.txt/environment.yml and pin dependencies

0.8.1 (2023-08-21)
------------------
- remove redundant request from bc2pg, drop wfs get_spatial_types function
- get sort key and geom column via DescribeFeatureType request (via owslib.feature.schema) rather than GetCapabilities
- list tables internally as a temporary work around for missing getCapabilities response from service (#141)

0.8.0 (2023-07-21)
------------------
All changes from pre-releases below

0.8.0b1 (2023-07-13)
------------------
- wrap all requests to WFS/BCDC with @retry to better handle network/service errors
- modify cache structure, bcdata now caches to folder ~/.bcdata/
- cache layer schemas to reduce request load
- refactor wfs module to better handle caching/retrys

0.8.0a3 (2023-07-05)
------------------
- improve retry logic on download error, further request minimization, fix bcdc regression from #135

0.8.0a2 (2023-07-03)
------------------