@@ -4,7 +4,9 @@ Changes
 0.10.0 (2024-02-19)
 ------------------
 - store known primary keys in repository (data/primary_keys.json)
-- add new function bcdata.get_primary_keys(), use remote url as default primary key lookup for bc2pg (#163)
+- add new function bcdata.get_primary_keys(), using remote url as default primary key lookup for bc2pg (#163)
+- when available, use known primary key as default sortkey (#165)
+- enable bcdata.get_sorkey() function
 - --refresh option cleanup, now available only via CLI
 
 0.9.2 (2024-02-18)
